--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=debug,stdout,log
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d [%-5p] %rms: %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d [%-5p] %l %rms: %m%n
 #
 
 log4j.appender.log.MaxFileSize=2mb
