--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # rootLogger参数分别为：根Logger级别，输出器stdout，输出器log
-log4j.rootLogger=debug,stdout,log
+log4j.rootLogger=trace,stdout,log
 # 输出信息到控制台
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%-5p] %l %rms: %m%n
 log4j.appender.log.MaxFileSize=2mb
 log4j.appender.log.MaxBackupIndex=20
 log4j.appender.log=org.apache.log4j.RollingFileAppender
-log4j.appender.log.DatePattern='.'yyyy-MM-dd
+#log4j.appender.log.DatePattern='.'yyyy-MM-dd
 log4j.appender.log.File=./log/debug.log
 log4j.appender.log.Encoding=UTF-8
 log4j.appender.D.Append=true
